好像bug全修啊好了诶！！

--- a/BR-MS/CheckMessage.html
+++ b/BR-MS/CheckMessage.html
@@ -30,7 +30,7 @@
             <el-form-item label="消息主题">
                 <el-input v-model="queryParams.theme"></el-input>
             </el-form-item>
-            <el-form-item label="发送者姓名">
+            <el-form-item label="发送者用户名">
                 <el-input v-model="queryParams.sender"></el-input>
             </el-form-item>
             <el-form-item>
@@ -46,16 +46,17 @@
             </el-form-item>
         </el-form>
         <el-radio-group v-model="checked" @change="handleCheckedStatusesChange">
-            <el-radio :label="1">全部</el-radio>
+            <el-radio :label="1">全部收件</el-radio>
             <el-radio :label="2">未读</el-radio>
             <el-radio :label="3">已读</el-radio>
+            <el-radio :label="4">发件箱</el-radio>
         </el-radio-group>
         <!--dialog对话框：在保留当前页面状态的情况下，告知用户并承载相关操作-->
         <el-dialog title="发送消息" :visible.sync="dialogVisible" width="800px" :before-close="handleClose">
             <!--弹出对话框的发送信息功能：收件人 消息主题 正文-->
             <el-form :model="formInput1">
                 <el-form-item label="收件人" :label-width="formLabelWidth">
-                    <el-input placeholder="请输入收件人的用户名" v-model="formInput1.name" clearable
+                    <el-input placeholder="请输入收件人的用户名" v-model="formInput1.recipient" clearable
                               auto-complete="off"></el-input>
                 </el-form-item>
                 <el-form-item label="消息类型" :label-width="formLabelWidth">
@@ -68,7 +69,8 @@
                     </el-select>
                 </el-form-item>
                 <el-form-item label="消息主题" :label-width="formLabelWidth">
-                    <el-input placeholder="请输入消息消息主题" v-model="formInput1.theme" clearable auto-complete="off"></el-input>
+                    <el-input placeholder="请输入消息消息主题" v-model="formInput1.theme" clearable
+                              auto-complete="off"></el-input>
                 </el-form-item>
                 <el-form-item label="正文" :label-width="formLabelWidth">
                     <el-input type="textarea" :rows="10" placeholder="请输入内容" v-model="formInput1.content"
@@ -89,7 +91,7 @@
                     <el-checkbox v-model="props.row.selected"></el-checkbox>
                 </template>
             </el-table-column>
-            <el-table-column prop="sender_Id" sortable label="发件人ID" width="100"></el-table-column>
+            <el-table-column prop="sender" sortable label="发件人" width="100"></el-table-column>
             <el-table-column prop="type" label="消息类型" width="150">
                 <template slot-scope="props">
                     {{['申请注册','重置密码','申请物资调配','申请物资注册','普通消息'][Number(props.row.type)]}}
@@ -101,12 +103,10 @@
                     <!--查看button 嵌套dialog-->
                     <el-button size="mini" @click="()=>{props.row.dialog2Visible=true}" type="text">查看
                     </el-button>
-                    <el-dialog title="消息详情" :visible.sync="props.row.dialog2Visible" width="30%" :before-close="()=>{hasRead(props.row)}">
+                    <el-dialog title="消息详情" :visible.sync="props.row.dialog2Visible" width="30%"
+                               :before-close="()=>{hasRead(props.row)}">
                         <!--发送信息弹窗：收件人 消息主题 正文-->
                         <el-form>
-                            <el-form-item label="发件人ID:">
-                                <span>{{props.row.sender_Id}}</span>
-                            </el-form-item>
                             <el-form-item label="发件人:">
                                 <span>{{props.row.sender}}</span>
                             </el-form-item>
@@ -156,10 +156,20 @@
                     searchKey["isRead"] = read[app.checked];
                     common["isRead"] = read[app.checked];
                 }
+                if(app.checked===4){
+                    searchKey["sender"]=localStorage.getItem('username');
+                }else{
+                    delete searchKey.sender;
+                }
+            }else{
+                delete searchKey.sender;
             }
         }
-        post('/common/getms', searchKey ? {...searchKey,isDel:0} : {pageSize: pageSize, pageNum: page, ...common,isDel:0}, (data, err) => {
-            app.pageNum=page;
+        post('/common/getms', searchKey ? {...searchKey} : {
+            pageSize: pageSize,
+            pageNum: page, ...common
+        }, (data, err) => {
+            app.pageNum = page;
             app.initializing = false;
             console.log(data);
             if (err) {
@@ -180,8 +190,8 @@
             console.log(msg);
             for (var i in msg) {
                 msg[i]['dialog2Visible'] = false;
-                msg[i]['selected']=false;
-                    items.push(msg[i]);
+                msg[i]['selected'] = false;
+                items.push(msg[i]);
             }
         });
     }
@@ -191,7 +201,6 @@
             var needed = {
                 theme: searchKey.theme,
                 type: searchKey.type,
-                sender_Id: searchKey.sender_Id,
                 sender: searchKey.sender
             };
         }
@@ -206,16 +215,16 @@
             common1['isRead'] = 1;
             common2['isRead'] = 1;
         }
-        post('/common/getms', searchKey ? {...needed, ...common1,isDel:0} : common1, (data) => {
+        post('/common/getms', searchKey ? {...needed, ...common1} : common1, (data) => {
             maxPage = data.allPages;
             common2['pageNum'] = maxPage;
-            post('/common/getms', searchKey ? {...needed, ...common2,isDel:0} : common2, (data) => {
+            post('/common/getms', searchKey ? {...needed, ...common2} : common2, (data) => {
                 var arr = [], msg = data.SysMessage;
                 for (var key in msg) {
                     arr.push(msg[key]);
                 }
                 lastPageItems = arr.length;
-                total = 6 * (maxPage - 1) + lastPageItems;
+                total = pageSize * (maxPage - 1) + lastPageItems;
                 totalRef.push(total);
             });
         });
@@ -266,13 +275,12 @@
         }
     }
 
-    var delList=[];
+    var delList = [];
     var read = [null, null, 0, 1];
     var items = [];
     var pageNum = 1, pageSize = 6, maxPage = 0, total = 0, lastPageItems = 0;
     var maxPageRef = [], totalRef = [];
     var searchKey = {
-        isRead:0
     };
     var post = require('/mods/backend');
     var app = new Vue({
@@ -290,11 +298,11 @@
                 total: totalRef,
                 <!--发送消息 弹窗-->
                 formInput1: {
-                    name: '',
+                    recipient: '',
                     theme: '',
                     content: '',
                     type: '',
-                    recipientId: ''
+                    recipient: ''
                 },
                 queryParams: {
                     theme: null,
@@ -302,9 +310,7 @@
                     sender: null
                 },
                 formLabelWidth: '120px',
-                <!--页面中table中 假数据-->
                 tableData: items,
-                <!--查看button 及 假数据-->
                 dialog2Visible: false
             }
         },
@@ -313,16 +319,16 @@
         },
         methods: {
             handleCurrentChange: (page) => {
-                getData.call(app, page, searchKey, true);
+                getData.call(app, page, searchKey);
             },
             handleCheckedStatusesChange() {
                 app.initializing = true;
                 if (app.checked === 1) {
-                    searchKey={};
+                    searchKey = {};
                 } else if (app.checked === 2) {
-                    searchKey={isRead:0};
+                    searchKey = {isRead: 0};
                 } else if (app.checked === 3) {
-                    searchKey={isRead:1};
+                    searchKey = {isRead: 1};
                 }
                 app.search();
             },
@@ -355,7 +361,7 @@
                     console.log(msg_Id);
                     post('/common/deletems', {
                         msg_Id: Number(msg_Id),
-                        isDel:0
+                        isDel: 0
                     }, (data, err) => {
                         if (err) {
                             app.$message.error(err.msg);
@@ -367,33 +373,33 @@
                             return;
                         }
                         app.initializing = true;
-                        if(app.pageNum!==maxPageRef[0]){
-                            getData(maxPageRef[0],searchKey);
-                        }else{
-                            if(app.pageNum!==1){
-                                getData(maxPageRef[0] - 1,searchKey);
+                        if (app.pageNum !== maxPageRef[0]) {
+                            getData(maxPageRef[0], searchKey);
+                        } else {
+                            if (app.pageNum !== 1) {
+                                getData(maxPageRef[0] - 1, searchKey);
                             }
                         }
                     });
                 })
             },
-            delSelected:function(){
+            delSelected: function () {
                 this.$confirm('确认删除所选消息？', null, {
                     confirmButtonText: '确定',
                     cancelButtonText: '取消',
                     type: 'warning'
-                }).then(()=>{
-                    var idToDel=[];
-                    for(var key in app.tableData){
-                        if(app.tableData[key]['selected']===true){
+                }).then(() => {
+                    var idToDel = [];
+                    for (var key in app.tableData) {
+                        if (app.tableData[key]['selected'] === true) {
                             idToDel.push(app.tableData[key]['msg_Id']);
                         }
                     }
-                    delList=idToDel;
-                    for(let i in idToDel){
-                        post('/common/deletems',{
-                            msg_Id:idToDel[i]
-                        },(data,err)=>{
+                    delList = idToDel;
+                    for (let i in idToDel) {
+                        post('/common/deletems', {
+                            msg_Id: idToDel[i]
+                        }, (data, err) => {
                             console.log(i);
                             if (err) {
                                 app.$message.error(err.msg);
@@ -402,51 +408,54 @@
                             }
                         });
                     }
+                }).then(() => {
+                    var len = delList.length;
+                    if (app.pageNum !== maxPageRef[0]) {
+                        getData(maxPageRef[0], searchKey);
+                    } else {
+                        if (len == lastPageItems) {
+                            if (app.pageNum !== 1) {
+                                getData(maxPageRef[0] - 1, searchKey);
+                            } else {
+                                getData(maxPageRef[0], searchKey);
+                            }
+                        } else {
+                            getData(maxPageRef[0], searchKey);
+                        }
+                    }
                 })
-                //     .then(()=>{
-                //     var len=delList.length;
-                //     if(app.pageNum!==maxPageRef[0]){
-                //         getData(maxPageRef[0],searchKey);
-                //     }else{
-                //         if(len==lastPageItems){
-                //             if(app.pageNum===1){
-                //                 getData(maxPageRef[0] - 1,searchKey);
-                //             }
-                //         }else{
-                //             getData(maxPageRef[0],searchKey);
-                //         }
-                //     }
-                // })
             },
             send: function () {
                 post('/common/addms', {
                     theme: app.formInput1.theme,
                     content: app.formInput1.content,
                     type: app.formInput1.type,
-                    sender_Id: localStorage.getItem('id'),
-                    sender: localStorage.getItem('realName'),
-                    recipient: app.formInput1.name,
-                    isDel:0
+                    recipient: app.formInput1.recipient
                 }, (data, err) => {
+                    app.initializing = false;
                     if (err) {
                         app.$message.error(err.msg);
                         app.initializing = false;
                         if (err.id === post.NOT_LOGIN) {
 
                         }
-                        app.initializing = false;
                         return;
                     }
-                    console.log(data);
-                    console.log(err);
-                    app.initializing = false;
+                    this.$message({
+                        type: "success",
+                        message: '发送成功'
+                    })
+                    app.dialogVisible = false;
+                    app.initializing = true;
+                    pageControl('stay', searchKey);
+                    app.loading = false;
                 })
             },
             hasRead: function (row) {
                 row.dialog2Visible = true;
                 post('/common/readedms', {
                     msg_Id: row.msg_Id,
-                    isDel:0
+                    isDel: 0
                 }, (data, err) => {
                     if (err) {
                         app.$message.error(err.msg);
@@ -457,7 +466,7 @@
                         app.initializing = false;
                         return;
                     }
-                    pageControl('stay',searchKey);
+                    pageControl('stay', searchKey);
                     console.log(data);
                     console.log(err);
                     app.initializing = false;
