--- a/BR-MS/HistoryLookup.html
+++ b/BR-MS/HistoryLookup.html
@@ -31,6 +31,7 @@
         <el-form-item label="相关仓库">
             <el-select
                 v-model="formInput.repo"
+                fiterable
                 placeholder="请选择">
                 <el-option
                     v-for="repo in repos"
@@ -130,6 +131,9 @@
                 post('/system/schedulehistory',{
 
                 })
+            },
+            getWarehouses:function(){
+
             }
         },
         computed: {
